--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.html
@@ -4,19 +4,20 @@
     <div class="container mx-2 mt-n1">
         <div class="card mb-3">
             <div class="card-body">
+                <div class="d-inline me-4">
+                    <input class="form-check-input me-2 mt-2" (click)="toggleNewClient()" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                    <label class="form-check-label mb-4 mt-2" for="flexRadioDefault2"> 
+                        New Client
+                    </label>
+                </div>
+                <div class="d-inline ms-4">
+                    <input class="form-check-input me-2 ms-4 mt-2" (click)="toggleButton()" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                    <label class="form-check-label mb-4 mt-2" for="flexRadioDefault1">
+                        Existing Client
+                    </label>
+                </div>
+               
                 
-                    <div *ngIf="!new">
-                        <input class="form-check-input me-2 mt-2" (click)="toggleButton()" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                        <label class="form-check-label mb-4 mt-2" for="flexRadioDefault1">
-                          Existing Client
-                        </label>
-                    </div>
-                    <div *ngIf="new">
-                        <input class="form-check-input me-2 mt-2" (click)="toggleNewClient()" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                        <label class="form-check-label mb-4 mt-2" for="flexRadioDefault1">
-                          New Client
-                        </label>
-                    </div>
         
                     <!-- ROW 1 -->
                     <div class="row mb-4">
@@ -312,7 +313,7 @@
         <div class="row ">
             <div class="col-6"></div>
             <div class="col-6 d-flex justify-content-end">
-                <button type="button" class="btn btn-outline-primary"  id="compute" (click)="createQuotation();" >Compute</button>
+                <button type="button" class="btn btn-outline-primary btn-lg"  id="compute" (click)="createQuotation();" >Compute</button>
             </div>
         </div>
     </div>
